--- a/sites/all/themes/msd2014/css/msd2014.css
+++ b/sites/all/themes/msd2014/css/msd2014.css
@@ -90,6 +90,20 @@ img {
 
 	}
 
+a {
+	color:#000;
+	
+	
+	}
+a:hover {
+	color:#000;
+	text-decoration:none;
+	
+	
+	}
+
+
+
 #footernav {
 	top:0em;
 	
@@ -115,7 +129,7 @@ img {
 	height:226;
 }
 .bg-pattern-rpt {
-	background-image: url(/sites/all/themes/msd2014/images/bg-image-pattern.png);
+	background-image: url(../images/bg-image-pattern.png);
 	background-repeat: repeat-x;
 	height: 226px;
 	width: 100%;
@@ -163,17 +177,42 @@ img {
 	}
 
 
-h6 {
+h1 {
+	font-family: "ff-din-web",sans-serif;
+	font-style: normal;
+	color:#3DAAC3;
+	border-bottom: #3DAAC3 1px solid;
+	font-size:2.2em;
+	display:inline-block;
+	padding-bottom:10px;
+	margin-bottom:10px;
+	
+	}
+
+.content-left-wrap h2 {
 	font-family: "ff-din-web",sans-serif;
 	font-style: normal;
 	color:#3DAAC3;
 	border-bottom: #3DAAC3 1px solid;
 	font-size:1.4em;
+	padding-bottom:10px;
+	margin-bottom:20px;
+	margin-top:30px;
 	
 	}
-
-
-
+h3 {
+	font-family:"HelveticaNeueLT-Light", sans-serif;
+	font-weight:100;
+	color:#000;
+	font-size:1.2em;
+	
+	
+	}
+.programs-content-right h4 {
+	color:#3DAAC3;
+	font-size:1.1em;
+	
+	}
 
 
 
@@ -317,15 +356,15 @@ h6 {
 .banner-nav {
 	margin-right:30px;
 	width:243px;
-	height:45px;
+	height:44px;
 	background-color:#242424;
 	float:right;
 	border-top:#000 solid 1px;
 	
 	}
 .thecrumb {
-	margin-top:10px;
-	margin-bottom:40px;
+	margin-top:6px;
+	margin-bottom:26px;
 	font-size:.95em;
 	
 	}	
@@ -334,11 +373,56 @@ h6 {
 	color:#3CA9C2;
 	
 	}
-.thecrumb a {
+.content-white-wrap .thecrumb a {
 	color:#79797A;
+	text-decoration:none;
+	
+	}
+	
+.content-black-wrap .thecrumb {
+	color:#B2B2B2;
+	
 	
 	}	
 	
+	
+	
+.content-black-wrap .thecrumb a {
+	color:#7F7F7F;
+	text-decoration:none;
+	
+	}	
+.content-black-wrap .thecrumb a:hover {
+	text-decoration:none;
+	
+	}	
+		
+	
+blockquote {
+	font-size:1em;
+	color:#666;
+	font-weight:100;
+	font-size:1.4em;
+	background-color: inherit;
+	background-image:none;
+	
+	
+	}
+		
+blockquote p {
+	font-family:"HelveticaNeueLT-Light", sans-serif;
+    font-size: 1em;
+	font-weight:100;
+	text-indent: inherit;
+	padding:0px;
+	padding-left:5px;
+	padding-right:40px;
+	line-height:1.4em;
+	padding-top:6px;
+	
+	
+	
+	}
 	
 
 a.bleft {
@@ -397,6 +481,31 @@ a.bpause:hover {
 	padding-bottom:20px;
 	
 }
+
+.content-left-wrap ul, .programs-content-left ul {
+	margin:0px;
+	padding:0px;
+	}
+.content-left-wrap li, .programs-content-left li, .ui-widget-content li {
+	list-style-image: url(../images/blt-arrow.png);
+	padding-left: 0px;
+	list-style-position: inside;
+	list-style-type: none;
+	}
+
+
+.content-left-wrap a {
+	color:#444;
+	text-decoration:underline;
+
+	}
+.content-left-wrap a:hover {
+	color:#3DAAC3;
+	text-decoration:underline;
+
+	}
+
+
 .social-media-wrap {
 	background-color: #1F1F1F;
 	width: 964px;
@@ -692,8 +801,6 @@ min-height:318px;
 	padding:0px;
 	margin:0px;
 	background-color:#404040;
-	/*font-family: "DIN-Regular", sans-serif;*/
-	
 	font-family: "ff-din-web",sans-serif;
 	font-style: normal;
 	
@@ -840,29 +947,366 @@ min-height:318px;
 
 	}
 
+.content-white-wrap {
+	
+	
+	background-color:#FFF; 
+	width:960px; 
+	margin:0 auto;
+	background-image: url(../images/content-btm-repeat.gif);
+	background-repeat: repeat-x;
+	background-position: left bottom;
+	padding-bottom: 90px;
+	}
 
+.content-black-wrap {
+	
+	
+	background-color:#000; 
+	width:964px; 
+	margin:0 auto;
+	padding-bottom: 50px;
+	}
+.content-black-wrap .content-left-wrap {
+	margin-left:0px;
+	
+	
+	}
 
-
-
-
+.content-black-wrap h2 {
+	color:#444;
+	
+	}
+.content-black-wrap blockquote {
+	color:#CBCBCB;
+	font-weight:100;
+	}
 
 .content-left-wrap {
-	float:left;
-	margin-left:22px;
-	width:685px;
-	
+	float: left;
+	margin-left: 22px;
+	width: 685px;	
 	}
 
 .content-right-wrap {
+	margin-top:120px;
 	float:right;
 	margin-right:13px;
 	width:214px;
-	background-color:#F60;
+	
+	}
+
+.programs-content-left {
+	background-color:#E5E5E5;
+	width:671px;
+	float:left;
+	margin-left:1px;
+	padding:40px 25px;
+	min-height:380px;
+	
+	}
+.programs-content-right {
+	background-color:#D6D6D6;
+	float:right;
+	width:239px;
+	margin-right:1px;
+	min-height:460px;
+	
+	}
+
+.programs-content-right p, .side-module p {
+	font-size:.85em;
+	color:#7F7F7F;
 	
 	}
 
 
 
+
+.programs-content-right blockquote {
+	color:#3F3F3F;
+	font-weight:100;
+	margin-left:20px;
+	
+	}
+
+.programs-content-right div {
+	margin:20px;
+	margin-top:10px;
+	
+	
+	}
+
+
+.share {
+	min-height:200px;
+	}
+
+.share p {
+	font-size:.9em;
+	color:#999;
+	
+	}
+.share img {
+	margin-right:1px;
+	
+	}	
+	
+.share a {
+	opacity:0.6;
+	filter:alpha(opacity=60); /* For IE8 and earlier */
+	
+	}
+.share a:hover {
+	opacity: 1;
+	filter:alpha(opacity=100); /* For IE8 and earlier */
+	
+	
+	}	
+
+.side-module {
+	background-color:#EFEFEF;
+	padding-bottom:10px;
+	
+	}
+
+
+.side-module h2 {
+	background-color:#6CC;
+	font-family: "ff-din-web",sans-serif;
+	font-style: normal;
+	color:#FFF;
+	padding-left:20px;
+	margin-bottom:0px;
+	font-size:1.1em;
+	line-height:1.1em;
+	padding-top:16px;
+	padding-bottom:16px;
+	
+	
+	
+	}
+.side-module h5, .programs-content-right h5 {
+ 	font-weight:700; 
+	color:#000;
+	font-weight:.8em;
+
+}
+
+
+.side-module blockquote p, .side-module blockquote {
+	margin:0px !important;
+	padding:0px;
+	left:0px;
+	
+	}
+.side-module blockquote {
+	left:0px;
+	padding:20px !important;
+	
+	}
+.side-module div {
+	padding:20px;
+	padding-top:30px;
+	padding-bottom:10px;
+	color:#7F7F7F;
+	
+	}
+	
+.programs-module {
+	width:239px;
+	margin-right:1px;
+	margin-left:1px;
+	margin-top:2px;
+	padding-bottom:20px;
+	min-height:422px;
+	float:left;
+	background-color:#FFF;
+	
+	}
+
+.programs-module:hover {
+	background-color:#ECECEC;
+	
+	}
+.programs-module:hover img {
+	
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+	filter: gray; /* IE6-9 */
+
+	-webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+	opacity:.9;
+	transition: all 0.5s ease 0s;
+	
+	}	
+.programs-module:hover a.proj-more {
+	background-image: url(../images/project-more-arrow-o.gif);
+	
+	}	
+	
+	
+.programs-module h2 {
+	font-family: "ff-din-web",sans-serif;
+	font-style: normal;
+	font-size: 1.1em;
+	color: #000;
+	padding: 11px 20px;
+	margin: 0px;
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #000;
+	line-height:1.1em;
+	min-height:36px;	
+	
+	}
+.programs-module p {
+	margin: 14px 20px;
+	margin-bottom:30px;
+	line-height:1.4em;
+	
+	}
+	
+a.proj-more {
+	display: block;
+	background-image: url(../images/project-more-arrow.gif);
+	background-repeat: no-repeat;
+	background-position: left center;
+	padding-left: 40px;
+	color:#7F7F7F;
+	height:29px;
+	line-height:29px;
+	margin-left:20px;
+	
+	}	
+	
+.side-module blockquote p {
+	font-size:1.15em;
+	line-height:1.2em;
+	color:#3F3F3F;
+
+	
+	}	
+	
+.programs-content-right blockquote p {
+	font-size:.95em;
+	color:#3F3F3F;
+	line-height:1.25;
+	padding-right:20px;
+
+	
+	}
+	
+
+.ui-tabs-anchor img {
+
+filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.9999 0.9999 0.9999 0 0 0.9999 0.9999 0.9999 0 0 0.9999 0.9999 0.9999 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+	filter: gray; /* IE6-9 */
+
+	-webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+	opacity:.25;
+	transition: all 0.5s ease 0s;
+}
+	
+	
+	
+a#ui-id-1.ui-tabs-anchor span {
+	display: block;
+	height: 54px;
+	line-height: 54px;
+	padding-left: 25px;
+	background-color: #999999;
+	background-image: url(../images/tab-down-arrow-white.png);
+	background-repeat: no-repeat;
+	background-position: 270px center;
+	color: #FFF;
+	border-bottom-width: 2px;
+	border-bottom-style: solid;
+	border-bottom-color: #000;
+	}	
+	
+	
+a#ui-id-2.ui-tabs-anchor span {
+	display:block;
+	height:54px;
+	line-height:54px;
+	padding-left:25px;
+	background-color:#999999;
+	background-image: url(../images/tab-down-arrow-white.png);
+	background-repeat: no-repeat;
+	background-position: 270px center;
+	color:#FFF;
+	
+	
+	}	
+	
+
+a#ui-id-3.ui-tabs-anchor span {
+	display:block;
+	height:54px;
+	line-height:54px;
+	padding-left:25px;
+	background-color:#999999;
+	background-image: url(../images/tab-down-arrow-white.png);
+	background-repeat: no-repeat;
+	background-position: 270px center;
+	color:#FFF;
+	
+	}	
+
+
+.ui-tabs-active a span {
+	
+	color:#000 !important;
+	background-image: url(../images/tab-down-arrow-black.png) !important;
+	background-color:#D9D9D9 !important;
+	border-bottom-width: 2px !important;
+	border-bottom-style: solid !important;
+	border-bottom-color: #FFF !important;
+	
+	
+	}
+	
+
+
+.ui-tabs-active img {
+	
+	filter: none; /* Firefox 10+, Firefox on Android */
+	filter: none; /* IE6-9 */
+
+	-webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+	opacity:1;
+	transition: all 0.5s ease 0s;
+	
+	}
+
+
+.ui-tabs-nav li:hover img {
+	
+	filter: none; /* Firefox 10+, Firefox on Android */
+	filter: none; /* IE6-9 */
+
+	-webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+	opacity:1;
+	transition: all 0.5s ease 0s;
+	
+	}
+
+.backtop a {
+	display: block;
+	float: right;
+	background-image: url(../images/top-arrow.gif);
+	background-position: right center;
+	height: 30px;
+	width: 110px;
+	background-repeat: no-repeat;
+	color: #666;
+	line-height: 30px;
+	margin-right:30px;
+	}
+
+.backtop a:hover {
+	background-image: url(../images/top-arrow-o.gif);
+	}
 
 
 /*  Used to manage your own mobile styles  */
@@ -873,13 +1317,4 @@ min-height:318px;
 /*  iPhone-vertical */
 @media screen and (max-width: 480px) {
 
-}
-
-body .main-block, body.headingblock .main-block {
-	padding:0px;
-}
-
-.wrapper {
-    padding: 0px;
-    width: 100%;
 }
