Moved $messages to correct page.tpl template instead of node.tpl. Styled to look better.

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -87,4 +87,8 @@ div.view-home-slider {
 
 .content-black-wrap .thecrumb a:hover {
 	text-decoration:none;
-}	
+}
+
+div.messages {
+    margin: 6px 32px;
+}
