Added new dynamic menu following CSS being supplied from design. Use theme_menu_link__main_menu to add class "has-sub" where applicable. Started to work on homepage to implement dynamic generation of home feature section.

--- a/sites/all/themes/msd2014/css/msd2014.css
+++ b/sites/all/themes/msd2014/css/msd2014.css
@@ -135,17 +135,17 @@ a:hover {
 	width: 100%;
 }
 
-.navigation ul {
+.navigation {
 	display:block;
-	width:993px;
-	margin-left:-26px;
+	margin-top:28px;
+	margin-bottom:28px;
 	
 	
 	
 	}
 
 
-.navigation li {
+.navigation ul li {
 	display:block;
 	float:left;
 	list-style:none;
