Use a view to output the home feature items.

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -96,3 +96,7 @@ div.messages {
 #cssmenu > ul > li > a {
     text-transform: uppercase;
 }
+
+div.module-wrap h2 {
+    text-transform: uppercase;
+}
