--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -54,8 +54,8 @@ a {
     color: #4C5E71;
 }
 
-div.view-home-slider {
-	padding:0px;
+div.view {
+	padding-top:0px !important;
 }
 
 .thecrumb {
@@ -141,4 +141,12 @@ div.sharethis-wrapper {
 .share span:hover {
 	opacity: 1;
 	filter:alpha(opacity=100); /* For IE8 and earlier */
-}	
+}
+
+.programs-content-right blockquote {
+    padding: 0px !important;
+}
+
+.programs-content-right p {
+    margin-bottom: 0px;
+}
