--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -155,3 +155,37 @@ div.text-bottom-item {
     height: 44px;
     overflow: hidden;
 }
+
+.share {
+	min-height:0;
+}
+
+.programs-module {
+	height:550px;
+	min-height:0;
+	position:relative;
+}
+
+div.read-more-wrapper {
+    bottom: 25px;
+    position: absolute;
+}
+
+#cssmenu a {
+	font-size: 1.24em;
+}
+
+.programs-content-left {
+	min-height:0;
+}
+
+.programs-content-right li {
+	list-style-image: url(../images/blt-arrow.png);
+	padding-left: 0px;
+	list-style-position: inside;
+	list-style-type: none;
+}
+
+.programs-content-right li p {
+    display: inline;
+}
