Styling tweak to global menu.

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -169,3 +169,11 @@ h2, h3, h4, .pullquote, .content-black-wrap h2 {
     color: #3DAAC3;
     font-family: "ff-din-web",sans-serif;
 }
+
+#cssmenu li:first-child a {
+     padding-left: 24px;
+}
+
+#cssmenu a {
+	padding-left:38px;
+}
