--- a/sites/all/themes/msd2014/css/msd2014.css
+++ b/sites/all/themes/msd2014/css/msd2014.css
@@ -1,6 +1,6 @@
 /**
  * @license
- * MyFonts Webfont Build ID 2769219, 2014-03-13T23:17:45-0400
+ * MyFonts Webfont Build ID 2792818, 2014-04-10T21:06:07-0400
  * 
  * The fonts listed in this notice are subject to the End User License
  * Agreement(s) entered into by the website owner. All other parties are 
@@ -8,20 +8,20 @@
  * 
  * You may obtain a valid license at the URLs below.
  * 
- * Webfont: Helvetica 75 Bold by Linotype
+ * Webfont: Helvetica Neue 75 Bold by Linotype
  * URL: http://www.myfonts.com/fonts/linotype/neue-helvetica/helvetica-75-bold/
  * Copyright: Copyright &#x00A9; 1988, 1990, 1993, 2002 Adobe Systems Incorporated.  All Rights Reserved. &#x00A9; 1981, 2002 Heidelberger Druckmaschinen AG. All rights reserved.
  * 
- * Webfont: Helvetica 55 Roman by Linotype
+ * Webfont: Helvetica Neue 55 Roman by Linotype
  * URL: http://www.myfonts.com/fonts/linotype/neue-helvetica/helvetica-55-roman/
  * Copyright: Copyright &#x00A9; 1988, 1990, 1993, 2002 Adobe Systems Incorporated.  All Rights Reserved. &#x00A9; 1981, 2002 Heidelberger Druckmaschinen AG. All rights reserved.
  * 
- * Webfont: Helvetica 45 Light by Linotype
+ * Webfont: Helvetica Neue 45 Light by Linotype
  * URL: http://www.myfonts.com/fonts/linotype/neue-helvetica/helvetica-45-light/
  * Copyright: Part of the digitally encoded machine readable outline data for producing the Typefaces provided is copyrighted &#x00A9; 1988 - 2006 Linotype GmbH, www.linotype.com. All rights reserved. This software is the property of Linotype GmbH, and may not be repro
  * 
  * 
- * License: http://www.myfonts.com/viewlicense?type=web&buildid=2769219
+ * License: http://www.myfonts.com/viewlicense?type=web&buildid=2792818
  * Licensed pageviews: 500,000
  * 
  * Â© 2014 MyFonts Inc
@@ -29,20 +29,17 @@
 
 
 /* @import must be at top of file, otherwise CSS will not work */
-@import url("//hello.myfonts.net/count/2a4143");
+@import url("//hello.myfonts.net/count/2a9d72");
 
   
-@font-face {font-family: 'HelveticaNeueLTStd-Bd';src: url('webfonts/2A4143_0_0.eot');src: url('webfonts/2A4143_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2A4143_0_0.woff') format('woff'),url('webfonts/2A4143_0_0.ttf') format('truetype');}
+@font-face {font-family: 'HelveticaNeueLTStd-Bd';src: url('../webfonts/2A9D72_0_0.eot');src: url('../webfonts/2A9D72_0_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2A9D72_0_0.woff') format('woff'),url('../webfonts/2A9D72_0_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'HelveticaNeueLTStd-Roman';src: url('webfonts/2A4143_1_0.eot');src: url('webfonts/2A4143_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2A4143_1_0.woff') format('woff'),url('webfonts/2A4143_1_0.ttf') format('truetype');}
+@font-face {font-family: 'HelveticaNeueLTStd-Roman';src: url('../webfonts/2A9D72_1_0.eot');src: url('../webfonts/2A9D72_1_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2A9D72_1_0.woff') format('woff'),url('../webfonts/2A9D72_1_0.ttf') format('truetype');}
  
   
-@font-face {font-family: 'HelveticaNeueLT-Light';src: url('webfonts/2A4143_2_0.eot');src: url('webfonts/2A4143_2_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2A4143_2_0.woff') format('woff'),url('webfonts/2A4143_2_0.ttf') format('truetype');}
+@font-face {font-family: 'HelveticaNeueLT-Light';src: url('../webfonts/2A9D72_2_0.eot');src: url('../webfonts/2A9D72_2_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2A9D72_2_0.woff') format('woff'),url('../webfonts/2A9D72_2_0.ttf') format('truetype');}
  
-
-
-
 
 
 
