--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -147,7 +147,7 @@ div.read-more-wrapper {
 }
 
 #cssmenu a {
-	font-size: 1.24em;
+	font-size: 1.28em;
 }
 
 .programs-content-left, .programs-content-right {
@@ -248,5 +248,9 @@ div.contextual-links-wrapper li {
 
 div.contextual-links-wrapper li a {
     background-image:none !important;
+}
+
+#admin-menu a, #admin-menu li > span {
+    font-family: arial,sans-serif;
 }
 
