--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -273,3 +273,7 @@ div.right-column-wrap span.view-all {
 div.right-column-wrap span.view-all a {
 	color: #3DAAC3;
 }
+
+.programs-module p.post-date {
+    margin: 14px 20px 0px 20px;
+}
