--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -141,6 +141,10 @@ div.text-bottom-item {
 	padding-bottom:45px;
 }
 
+.programs-module h2 > a {
+	color: #3DAAC3;
+}
+
 div.read-more-wrapper {
     bottom: 25px;
     position: absolute;
