Removed sharing functionality from user profile page, styled to align right column header with the main profile image

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -286,3 +286,7 @@ div.right-column-wrap span.view-all a {
 .programs-module p.event-date {
     margin: 14px 20px 0px 20px;
 }
+
+body.page-user .content-right-wrap {
+	margin-top:113px;
+}
