Removed styling odd/even rows on table rows, overridden default table row style from uni templates

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -312,3 +312,7 @@ div.view-our-people th,
 div.view-our-people td {
      padding: 3px 0px 3px 4px;
 }
+
+table tbody tr:nth-child(2n+1) {
+    background: inherit !important;
+}
