Installed iconizer to display icons next to file type links such as PDF's, docx files

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -325,3 +325,24 @@ table.white-only tr,
 table.white-only th {
     border: none;
 }
+
+a.document {
+	background: none;
+}
+
+a.icon {
+    background: none;
+    border: none;
+    border-radius: 0px;
+    color: inherit;
+    display: inline;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: normal;
+    margin: 0px;
+    padding: 0px;
+}
+
+a.icon:hover, a.icon:focus {
+    background: none;
+}
