Ensure iconizer icons are not shown in right column

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -346,3 +346,8 @@ a.icon {
 a.icon:hover, a.icon:focus {
     background: none;
 }
+
+.content-right-wrap a {
+	padding: 0px !important;
+	background:none !important;
+}
