--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -371,3 +371,13 @@ a.icon:hover, a.icon:focus {
 	padding-top:16px;
 	padding-bottom:16px;	
 }
+
+div.footer_right_column div.content h2,
+div.footer_right_column div.content h2 a {
+	color: #3DAAC3;
+}
+
+div.footer_left_column h2 a,
+div.footer_center_column h2 a {
+	color: #B2B2B2;
+}
