--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -407,3 +407,20 @@ div.content-right-wrap.news {
     margin-bottom: 10px;
     margin-top: 60px;
 }
+
+/*
+Styling for blog posts
+*/
+.content-left-wrap div.view-blog h2 a {
+     color: #3DAAC3;
+     text-decoration: underline;
+}
+
+.content-left-wrap div.view-blog h2 {
+	margin-top: 10px;
+	display:inline-block;
+}
+
+div.view-blog .views-row {
+	padding-bottom: 24px;
+}
