Refactored redirectmsd to allow creating and editing of redirects, improved styling of forms.

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -424,3 +424,7 @@ Styling for blog posts
 div.view-blog .views-row {
 	padding-bottom: 24px;
 }
+
+#imageData #bottomNav {
+    display: none !important;
+}
