--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -439,3 +439,17 @@ div.view-blog .views-row {
     width: 560px;
     min-height:465px !important;
 }
+
+div.date-wrapper {
+    background: none repeat scroll 0 0 #3DAAC3;
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 18px;
+    padding: 7px 8px;
+    margin-right: 6px;
+}
+
+body.node-type-blog-post h2.title {
+	display: inline-block;
+	margin-top:0px;
+}
