--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -458,3 +458,8 @@ div.views-field-field-submitted-by,
 div.field-name-field-submitted-by {
 	margin: 0px 0px 8px 0px;
 }
+
+body.page-blog div.view-id-blog div.views-field-body img {
+	float: left;
+	margin: 0px 15px 0px 0px;
+}
