Don't show right column on landing page if there is no content for this. Go full width for the left content in this case.

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -372,6 +372,10 @@ a.icon:hover, a.icon:focus {
 	list-style-type: none;
 }
 
+div.programs-content-left.full-width {
+	width:912px;
+}
+
 .side-module h2 {
 	background-color:#3DAAC3;
 }
