Added linkedin logo styling

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -538,3 +538,11 @@ div#block-views-events-calendar-calendar {
 div.calendar_tooltips-title-value {
 	display:inline;
 }
+
+.social-media-wrap li a.linkedin {
+	background-image: url(../images/sm-linkedin.png);
+	background-position: left center;
+	background-color: #1F1F1F;
+	background-repeat: no-repeat;
+	margin-left:15px;
+}	
