Adding styling to remove border from footer list element

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -546,3 +546,7 @@ div.calendar_tooltips-title-value {
 	background-repeat: no-repeat;
 	margin-left:15px;
 }	
+
+div.footer-links-wrap div.footer_center_column div.content li:last-child {
+    border-bottom: none;
+}
