--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -376,11 +376,17 @@ a.icon:hover, a.icon:focus {
 	background:none !important;
 }
 
-.content-left-wrap li, .programs-content-left li, .ui-widget-content li, .side-module li {
+.content-left-wrap ul li, .programs-content-left ul li, .ui-widget-content ul li, .side-module ul li {
 	list-style-image: url(../images/blt-arrow.png);
 	padding-left: 0px;
 	list-style-position: inside;
 	list-style-type: none;
+}
+
+.content-left-wrap ol li, .programs-content-left ol li, .ui-widget-content ol li, .side-module ol li {
+  	list-style-type: decimal;
+	list-style-position: inside;
+	list-style-image:none;
 }
 
 div.programs-content-left.full-width {
@@ -553,4 +559,50 @@ div.footer-links-wrap div.footer_center_column div.content li:last-child {
 
 body.node-type-event div.field-name-body {
     margin-top:6px;
+}
+
+div#enews-subscribe {
+	padding: 0px 22px 0px 20px;
+	border-top: 1px solid #000000;
+}
+
+div#enews-subscribe h4 {
+	color: #FFFFFF;
+}
+
+div#enews-subscribe table tr,
+div#enews-subscribe table th {
+	border: none;
+}
+
+div#enews-subscribe table td {
+	padding:0px;
+}
+
+div#enews-subscribe form {
+    margin: 0px;
+    overflow: visible;
+}
+
+div#enews-subscribe form label,
+div#enews-subscribe form p {
+	font-family: "HelveticaNeueLT-Light", sans-serif;
+	color: #B2B2B2;
+	font-weight: normal;
+	font-size: 12px;
+	margin-right:5px;
+}
+
+div#enews-subscribe form input[type=text] {
+	width:100%;
+	padding:2px;
+}
+
+div#enews-subscribe input[type="submit"] {
+    background-color: #3DAAC3;
+    background-image: -moz-linear-gradient(center top , #3DAAC3, #164682);
+    border: 0 none;
+    border-radius: 0px;
+    margin: 2px 10px 12px 0px;
+    padding: 4px 18px 3px 18px;
 }
