--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -412,10 +412,15 @@ div.programs-content-left.full-width {
 
 div.footer_right_column div.content h2,
 div.footer_right_column div.content h2 a,
-div.footer_subscribe_enews div.content h2 {
+div.footer_subscribe_enews div.content h2,
+div.footer_subscribe_enews div.content h2 a {
 	color: #3DAAC3;
 }
 
+div.footer_subscribe_enews div.content h2 {
+    border-bottom: none;
+    margin-bottom: 8px;
+}
 
 div.footer_right_column div.content h2,
 div.footer_subscribe_enews div.content h2 {
