--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -594,3 +594,39 @@ div.footer-links-wrap div.footer_center_column div.content li:last-child {
 body.node-type-event div.field-name-body {
     margin-top:6px;
 }
+
+/***** Drupal Overrides *****/
+
+ul li.expanded,
+ul li.collapsed,
+ul li.leaf {
+    list-style-image: none;
+    list-style-type: none;
+}
+
+.tabs ul {
+    margin: 10px 0;
+    padding: 0;
+    list-style-type: none;
+    list-style-image: none;
+}
+
+.tabs li {
+    display: inline;
+    padding: 5px 10px;
+    background: #888;
+    background: rgba(0, 51, 102, 0.4);
+    border: 1px solid #A4AFC4
+}
+
+.tabs a,
+.tabs a:visited,
+.tabs a:link {
+    color: #fff;
+    border-bottom: none;
+}
+
+.tabs a:hover {
+    text-decoration: underline;
+}
+
