--- a/sites/all/themes/msd2014/css/nav-style.css
+++ b/sites/all/themes/msd2014/css/nav-style.css
@@ -14,8 +14,8 @@
 	font-weight: 300;
 	height: 36px;
 	display:block;
-	width:990px;
-	margin-left:-24px;
+	width:1010px;
+	margin-left:-25px;
 	
 	
 }
@@ -43,7 +43,7 @@
 	font-size: 1.28em;
 	line-height: 36px;
 	padding: 0px;
-	padding-left:24px;
+	padding-left:23px;
 	text-decoration: none;
     color:#FFFFFF;
 }
@@ -180,6 +180,9 @@
   left:inherit !important;
   top:inherit !important;
   clear:both;
+  padding-top:10px !important;
+  padding-bottom:10px !important;
+  background-color:#DEDEDE !important;
 }
 
 
