paragraph elements have weird defaults

--- a/sites/all/themes/msd2014/css/forms.css
+++ b/sites/all/themes/msd2014/css/forms.css
@@ -1,6 +1,12 @@
 .webform-client-form {
   padding: 0 3%;
 }
+
+.content .webform-client-form p {
+  text-align: left;
+  font-weight: 400;
+}
+
 .webform-client-form fieldset {  
   background: white; 
   border: none;
