--- a/sites/all/themes/msd2014/css/mobile.css
+++ b/sites/all/themes/msd2014/css/mobile.css
@@ -109,29 +109,24 @@ div {
 }
 
 .social-media-wrap {
-    float: none;
-    height: 250px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 15px;
-    width: 440px;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 15px;
+  width: 440px;
 }
 
-.social-media-wrap li {
+.social-media-wrap .social-medias li {
     float: none;
     line-height: 59px;
     margin-bottom: 0;
     padding-left: 30px;
-    width: 410px;
-}
-
-.social-media-wrap li a {
-	line-height: 59px;
+    width: 440px;
 }
 
 .module-wrap {
-	min-height:365px;
-	width:215px;
+	min-height: 365px;
+	width: 215px;
 	float:left;
 	padding-left:0px;
 }
