--- a/sites/all/themes/msd2014/css/msd2014.css
+++ b/sites/all/themes/msd2014/css/msd2014.css
@@ -536,12 +536,15 @@ a.bpause:hover {
 }
 
 .social-media-wrap li a.instagram {
-  background-image: url(../images/instagram.png);
-  background-image: url(../images/instagram.svg);
+  background-image: url(../images/instagram-new.png);
+  background-image: url(../images/instagram-new.svg);
+  background-size: 24px;
 }
 
 .social-media-wrap li a.instagram:hover {
-  background-color: #125688;
+  background-color: #d83578;
+  background: url(../images/instagram-new.png) 10px center no-repeat / 24px, -webkit-radial-gradient(0 100%, #f47d3f 10%,#e518a1 70%,#a545b9 100%);
+  background: url(../images/instagram-new.svg) 10px center no-repeat / 24px, -webkit-radial-gradient(0 100%, #f47d3f 10%,#e518a1 70%,#a545b9 100%);
 }
 
 .social-media-wrap li a.pinterest {
